--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-  <link rel="stylesheet" href="CSS/style.css">
+  <link rel="stylesheet" href="../CSS/style.css">
   <style>
 
   </style>
@@ -236,4 +236,5 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://kit.fontawesome.com/a2d78ab0db.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
