--- a/pages/faq.html
+++ b/pages/faq.html
@@ -241,7 +241,7 @@
                         <li class="mb-1"><a href="aboutus.html" class="text-light text-decoration-none">About
                                 Us</a></li>
                         <li class="mb-1"><a href="faq.html" class="text-light text-decoration-none">FAQs</a>
-                        <li class="mb-1"><a href="faq.html" class="text-light text-decoration-none">Citation</a></li>
+                        <li class="mb-1"><a href="https://docs.google.com/document/d/1jvztnqO1PuleajU92_Qkt9BH4Gz0H2B6xMnkwMXUrP0/edit?usp=sharing" class="text-light text-decoration-none">Citation</a></li>
                         </li>
                     </ul>
                 </div>
@@ -270,3 +270,4 @@
 
 
 </html>
+
