--- a/pages/selectplant.html
+++ b/pages/selectplant.html
@@ -348,7 +348,7 @@
             <ul class="list-unstyled small mb-0">
               <li class="mb-1"><a href="aboutus.html" class="text-light text-decoration-none">About Us</a></li>
               <li class="mb-1"><a href="faq.html" class="text-light text-decoration-none">FAQs</a></li>
-              <li class="mb-1"><a href="reference.docx" class="text-light text-decoration-none">Citation</a></li>
+              <li class="mb-1"><a href="https://docs.google.com/document/d/1jvztnqO1PuleajU92_Qkt9BH4Gz0H2B6xMnkwMXUrP0/edit?usp=sharing" class="text-light text-decoration-none">Citation</a></li>
             </ul>
           </div>
         </div>
@@ -417,5 +417,6 @@
 
 </script>
 </body>
+
 
 </html>
