--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <ul class="list-unstyled small mb-0">
               <li class="mb-1"><a href="pages/aboutus.html" class="text-light text-decoration-none">About Us</a></li>
               <li class="mb-1"><a href="pages/faq.html" class="text-light text-decoration-none">FAQs</a></li>
-              <li class="mb-1"><a href="pages/reference.docx" class="text-light text-decoration-none">Citation</a></li>
+              <li class="mb-1"><a href="https://docs.google.com/document/d/1jvztnqO1PuleajU92_Qkt9BH4Gz0H2B6xMnkwMXUrP0/edit?usp=sharing" class="text-light text-decoration-none">Citation</a></li>
             </ul>
           </div>
         </div>
@@ -197,5 +197,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/a2d78ab0db.js" crossorigin="anonymous"></script>
 </body>
+
 
 </html> 
