--- a/pages/selectplant.html
+++ b/pages/selectplant.html
@@ -41,7 +41,7 @@
                     <ul class="dropdown-menu dropdown-menu-dark">
                         <li><a class="dropdown-item" href="wildlife.html">Biodiversity</a></li>
                         <li><a class="dropdown-item" href="sciencesay.html">Science Says</a></li>
-                        <li><a class="dropdown-item" href="plantmaintshush.html">Plant Maintainance</a></li>
+                        <li><a class="dropdown-item" href="plantmaint.html">Plant Maintainance</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
@@ -420,3 +420,4 @@
 
 
 </html>
+
