--- a/pages/plantmaint.html
+++ b/pages/plantmaint.html
@@ -43,7 +43,7 @@
                     <ul class="dropdown-menu dropdown-menu-dark">
                         <li><a class="dropdown-item" href="wildlife.html">Biodiversity</a></li>
                         <li><a class="dropdown-item" href="sciencesay.html">Science Says</a></li>
-                        <li><a class="dropdown-item" href="plantmaintshush.html">Plant Maintainance</a></li>
+                        <li><a class="dropdown-item" href="plantmaint.html">Plant Maintainance</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
@@ -271,3 +271,4 @@
 
 
 </html>
+
