--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-  <link rel="stylesheet" href="../CSS/style.css">
-  <style>
-
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About Us</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  <link href="https://fonts.google.com/specimen/Lobster" rel="stylesheet">
+</head>
+<link rel="stylesheet" href="../CSS/style.css">
+<link rel="icon" type="image/x-icon" href="../media/logofi.png">
 </head>
 <body>
        <nav class="navbar navbar-expand-lg navbar-dark navbar-shadow">
@@ -238,4 +242,5 @@
 </body>
 
 </html>
+
 
