--- a/pages/selectplant.html
+++ b/pages/selectplant.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 <link rel="stylesheet" href="../CSS/style.css">
-<link rel="icon" type="image/x-icon" href="/media/logofi.png">
+<link rel="icon" type="image/x-icon" href="../media/logofi.png">
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark navbar-shadow">
@@ -420,4 +420,5 @@
 
 
 </html>
+
 
